feat(resol_ejercicio_listas_2022): Agrega revisión del ejercicio 'Carta, Baraja, Jugador'. Falta impl del método 'puntuacionTotal'